# ros2_gazebo_segway

./: README.md
src/segway/: CMakeLists.txt  package.xml
src/segway/gzmodels/: clouds_plane.world.xml  demo.world.xml
src/segway/gzmodels/segway/: model.config  model.sdf
src/segway/launch/: manual.launch.py
src/segway/src/: gazebo_ros_segway.cpp
